syntax = "proto3";

import "common.proto";

option go_package = "./comms/volpe";

service VolpeMaster {
    rpc StartStreams (stream WorkerMessage) returns (stream MasterMessage) {}
}

message WorkerID {
    string id = 1;
}

message MasterMessage {
    // can be adjust population only
    oneof message {
        AdjustPopulationMessage adjPop = 1;
    }
} 

message AdjustPopulationMessage {
    string problemID = 1;
    Population seed = 2;
    int32 size = 3;
}

message WorkerMessage {
    // can be metrics, or subpopulation
    oneof message {
        MetricsMessage metrics = 1;
        Population population = 2;
        WorkerID workerID = 3;
    }
}

message MetricsMessage {
    float cpuUtil = 1;
    float memUsage = 2;
    float memTotal = 3;
    map<string, ApplicationMetrics> applicationMetrics = 4;
    string workerID = 5;
}

message ApplicationMetrics {
    float cpuUtil = 1;
    float memUsage = 2;
}

// TODO: add close msgs